export type Comment = {
  id: string;
  content: string;
  userId: string;
  createdAt: Date;
  updatedAt: Date;
};
